# Agentic-AI-using-langchain

./: README.md  main.py  pyproject.toml
CH-1/: 1_LLM_Call.ipynb  2_Messages.ipynb  3_Structured_Outputs.ipynb
CH-2/: 1_first_chain.ipynb  2_chain_with_customRunnable.ipynb  3_parallel_chains.ipynb
CH-3/: 1_ReAct_Agent_Intro.ipynb  2_React_DB_Agent.ipynb  init_db.py
CH-3/SalesDB/: sales.db
